changed 'Appliance' to 'appliance' wherever applicable.

--- a/doc-Methods_Available_for_Automation/Terminology.adoc
+++ b/doc-Methods_Available_for_Automation/Terminology.adoc
@@ -23,13 +23,13 @@ Cloud::
   A virtual machine on which the virtual management database (VMDB) and
   {product-title} server reside.
 {product-title} Console::
-  A web-based interface into the {product-title} Appliance.
+  A web-based interface into the {product-title} appliance.
 {product-title} Role::
   A designation assigned to a {product-title} server that
   defines what a {product-title} server can do.
 {product-title} Server::
   The application that runs on the {product-title}
-  Appliance and communicates with the SmartProxy and the VMDB.
+  appliance and communicates with the SmartProxy and the VMDB.
 Cluster::
   Hosts that are grouped together to provide high availability and load
   balancing.
@@ -44,7 +44,7 @@ Drift::
 Event::
   A trigger to check a condition.
 Event Monitor::
-  Software on the {product-title} Appliance which monitors
+  Software on the {product-title} appliance which monitors
   external providers for events and sends them to the {product-title} server.
 Host::
   A computer on which virtual machine monitor software is loaded.
@@ -88,16 +88,16 @@ Repository::
   A place on a datastore resource which contains virtual machines.
 SmartProxy::
   The SmartProxy is a software agent that acts on behalf of the
-  {product-title} Appliance to perform actions on hosts,
+  {product-title} appliance to perform actions on hosts,
   providers, storage and virtual machines.
   +
-  The SmartProxy can be configured to reside on the {product-title} Appliance or on an ESX server version. The
+  The SmartProxy can be configured to reside on the {product-title} appliance or on an ESX server version. The
   SmartProxy can be deployed from the {product-title}
-  Appliance, and provides visibility to the VMFS storage. Each storage
+  appliance, and provides visibility to the VMFS storage. Each storage
   location must have a SmartProxy with visibility to it. The SmartProxy
-  acts on behalf of the {product-title} Appliance. If the
+  acts on behalf of the {product-title} appliance. If the
   SmartProxy is not embedded in the {product-title} server,
-  it communicates with the {product-title} Appliance over
+  it communicates with the {product-title} appliance over
   HTTPS on standard port 443.
 SmartState Analysis::
   Process run by the SmartProxy which collects the details of a virtual
@@ -131,7 +131,7 @@ Virtual Machine::
   of a physical host, or a set of physical hosts, to provide a scalable
   and on-demand method of system provisioning.
 Virtual Management Database (VMDB)::
-  Database used by the {product-title} Appliance to store
+  Database used by the {product-title} appliance to store
   information about your resources, users, and anything else required to
   manage your virtual enterprise.
 Virtual Thumbnail::
