--- a/doc-Methods_Available_for_Automation/topics/About_evm.root.adoc
+++ b/doc-Methods_Available_for_Automation/topics/About_evm.root.adoc
@@ -1,14 +1,14 @@
 [[_about_evm.root]]
 = $evm.root
 
-When an Automate method is launched, it has one global variable: [literal]+$evm+.
-The [literal]+$evm+ variable allows the method to communicate back to CloudForms Management Engine.
-The [literal]+$evm.root+ is the root object in the workspace, it provides access to the data currently loaded in the CloudForms Management Engine model.
+When an Automate method is launched, it has one global variable: `$evm`.
+The `$evm` variable allows the method to communicate back to CloudForms Management Engine.
+The `$evm.root` is the root object in the workspace, it provides access to the data currently loaded in the CloudForms Management Engine model.
 It use the objects data to solve more complex problems by integrating with CloudForms Management Engine methods. 
 
-The following is an excerpt from the [label]#InspectMe# method that can be found in the [label]#ManageIQ\System\Request# namespace.
-The dumpRoot method accesses the [literal]+$evm.root+ object, and sends all of its attributes to the CloudForms Management Engine Automate log for review.
-In the dumpServer Method, the inspect method is run based on the value of the miq_server obtained from the [literal]+$evm.root+ object. 
+The following is an excerpt from the *InspectMe* method that can be found in the *ManageIQ\System\Request* namespace.
+The dumpRoot method accesses the `$evm.root` object, and sends all of its attributes to the CloudForms Management Engine Automate log for review.
+In the dumpServer Method, the inspect method is run based on the value of the miq_server obtained from the `$evm.root` object. 
 
 [source,ruby]
 ----
