--- a/doc-Methods_Available_for_Automation/topics/Base_Methods.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Base_Methods.adoc
@@ -126,7 +126,7 @@ These methods may be used with all objects available in the Automate Model.
 					
 |===
 
-The [label]#InspectMe# [label]#Sample Method# uses many of the Methods shown in this document.
+The *InspectMe* *Sample Method* uses many of the Methods shown in this document.
 The method returns attributes of the CloudForms Management Engine Server and then returns attributes for the host, cluster, and virtual machine from the provider of invocation.
 In many environments it is linked to a button. 
 
