minor formatting changes

--- a/doc-Methods_Available_for_Automation/Terminology.adoc
+++ b/doc-Methods_Available_for_Automation/Terminology.adoc
@@ -87,18 +87,10 @@ Resource Pool::
 Repository::
   A place on a datastore resource which contains virtual machines.
 SmartProxy::
-  The SmartProxy is a software agent that acts on behalf of the
-  {product-title} appliance to perform actions on hosts,
-  providers, storage and virtual machines.
-  +
-  The SmartProxy can be configured to reside on the {product-title} appliance or on an ESX server version. The
-  SmartProxy can be deployed from the {product-title}
-  appliance, and provides visibility to the VMFS storage. Each storage
-  location must have a SmartProxy with visibility to it. The SmartProxy
-  acts on behalf of the {product-title} appliance. If the
-  SmartProxy is not embedded in the {product-title} server,
-  it communicates with the {product-title} appliance over
-  HTTPS on standard port 443.
+* The SmartProxy is a software agent that acts on behalf of the {product-title} appliance to perform actions on hosts, providers, storage and virtual machines.
+* The SmartProxy can be configured to reside on the {product-title} appliance or on an ESX server version. 
+* The SmartProxy can be deployed from the {product-title} appliance, and provides visibility to the VMFS storage. Each storage location must have a SmartProxy with visibility to it. The SmartProxy acts on behalf of the {product-title} appliance. 
+* If the SmartProxy is not embedded in the {product-title} server, it communicates with the {product-title} appliance over HTTPS on standard port 443.
 SmartState Analysis::
   Process run by the SmartProxy which collects the details of a virtual
   machine or instance. Such details include accounts, drivers, network
