--- a/doc-Integration_with_ServiceNow/Configuring_ServiceNow_Connection.adoc
+++ b/doc-Integration_with_ServiceNow/Configuring_ServiceNow_Connection.adoc
@@ -1,7 +1,7 @@
 [[Configuring_ServiceNow_Connection]]
 == Configuring ServiceNow Connection
 
-Configure the connection to the ServiceNow database by specifying the credentials in the +CMDB schema+ or instances within.
+Configure the connection to the ServiceNow database by specifying the credentials in the *CMDB schema* or instances within.
 
 The following methods are included:
 
@@ -13,7 +13,7 @@ The following methods are included:
 |snow_password |Associated user account password. 
 |=========================================================
 
-The table name cannot be changed unless there is a specific requirement to manage records elsewhere. Entries in this table appear in the +Configuration+ → +Base Items+ → +Servers+ menu in the ServiceNow web user interface.
+The table name cannot be changed unless there is a specific requirement to manage records elsewhere. Entries in this table appear in the menu:Configuration[Base Items > Servers] menu in the ServiceNow web user interface.
 
 
 [width="50%"]
