--- a/doc-Integration_with_ServiceNow/Managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/Managing_record_attributes.adoc
@@ -1,14 +1,14 @@
 [[managing_record_attributes]]
 == Managing Record Attributes
 
-You can specify any attribute via the +URI+ or +CMDB+ class instance. If neither exists, the value is determined from the CloudForms +VM+ or +miq_provision+ objects.
+You can specify any attribute via the *URI* or *CMDB* class instance. If neither exists, the value is determined from the CloudForms *VM* or *miq_provision* objects.
 
 The attributes can be reduced or extended as required by amending the Ruby methods.
 
 [NOTE]
-=======
+======
 Some attributes are not free-text (variable) fields, that is, they must be specific values. For example, Vendor value must already exist in the ServiceNow Vendor table beforehand.
-=======
+======
 
 === Create and Update (_patch) Record
 You can use the following attributes when creating and/or updating a record.
@@ -40,5 +40,5 @@ You can use the following attribute for getting or deleting a record.
 
 === Get All Records
 
-There are no attributes required to get all records. Method gets all records in the specified +ServiceNow table+ and writes their attributes to +automation.log+.
+There are no attributes required to get all records. Method gets all records in the specified *ServiceNow table* and writes their attributes to *automation.log*.
 
