--- a/doc-Integration_with_ServiceNow/Overview.adoc
+++ b/doc-Integration_with_ServiceNow/Overview.adoc
@@ -1,14 +1,14 @@
 [[Overview]]
 == Overview
 
-Red Hat CloudForms' integration with ServiceNow enables authentication with an existing ServiceNow database and +add/amend+ items in the ServiceNow database during state machine processing, for example, the VM provision state machine. Note that information in this guide assumes you have credentials and access to a ServiceNow database instance.
+Red Hat CloudForms' integration with ServiceNow enables authentication with an existing ServiceNow database and *add/amend* items in the ServiceNow database during state machine processing, for example, the VM provision state machine. Note that information in this guide assumes you have credentials and access to a ServiceNow database instance.
 
-The following new namespace and class delivers support for the management of +ServiceNow Configuration Management Database+ (CMDB) records using +ServiceNow’s RESTful+ web service.
+The following new namespace and class delivers support for the management of *ServiceNow Configuration Management Database* (CMDB) records using *ServiceNow’s RESTful* web service.
 -------
 /RedHat/Integration/ServiceNow/CMDB
 -------
 
-You can manage records in the +CMDB_CI_SERVER+ table, including create, update, and/or delete. The following methods are included:
+You can manage records in the *CMDB_CI_SERVER* table, including create, update, and/or delete. The following methods are included:
 
 [width="50%",cols="2,5",options="header"]
 |=========================================================
@@ -29,8 +29,8 @@ You can manage records in the +CMDB_CI_SERVER+ table, including create, update, 
 
 
 [NOTE]
-=======
+======
 Configuration item (CI) and record are used interchangeably and refer to items in a ServiceNow database table.
-=======
+======
 
 
