--- a/doc-Integration_with_ServiceNow/Use_Cases.adoc
+++ b/doc-Integration_with_ServiceNow/Use_Cases.adoc
@@ -4,9 +4,9 @@
 See the following use case examples of how ServiceNow can be integrated with automation workflow.
 
 === Provision VM from Template
-The Cloud and Infrastructure Provision VM from Template state machines contain +RegisterCMDB+ and +ActivateCMDB+ states.
+The Cloud and Infrastructure Provision VM from Template state machines contain *RegisterCMDB* and *ActivateCMDB* states.
 
-To create a new ServiceNow record during VM provisioning, amend the +ActiveCMDB+ state to call the create method, for example:
+To create a new ServiceNow record during VM provisioning, amend the *ActiveCMDB* state to call the create method, for example:
 -------
 /Integration/ServiceNow/CMDB/create
 -------
@@ -14,7 +14,7 @@ image:6667.png[StateActiveCMDBActiveCMDBstate]
 
 === VM Retirement
 
-The Cloud and Infrastructure Default retirement state machines contain +DeactivateCMDB+ and +RemoveFromCMDB+ states.
+The Cloud and Infrastructure Default retirement state machines contain *DeactivateCMDB* and *RemoveFromCMDB* states.
 
 To update a VM ServiceNow record during VM retirement, amend the DeactivateCMDB state to call the update_patch method, for example:
 -------
@@ -34,7 +34,7 @@ image:6669.png[StateRemoveFromCMDBRemovefromCMDBstate]
 
 Create a new System Event instance to update the ServiceNow record after a VM reconfiguration request has been approved and completed.
 
-Create a new +/System/Event/ReconfigVM_Task_Complete+ instance with a relationship value:
+Create a new */System/Event/ReconfigVM_Task_Complete* instance with a relationship value:
 -------
 /Integration/ServiceNow/CMDB/update_patch
 -------
