--- a/doc-Integration_with_Red_Hat_Satellite/Displaying_Red_Hat_Satellite_6_Contents.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Displaying_Red_Hat_Satellite_6_Contents.adoc
@@ -3,8 +3,8 @@
 
 Red Hat CloudForms provides to methods for viewing the contents of a Red Hat Satellite 6 provider. These methods are:
 
-* Providers - This presents the Red Hat Satellite 6 contents as a hierarchy of host groups belonging to a provider and then individual hosts belonging to each provider.
-* Configured Systems - This presents a list of all hosts on your Red Hat Satellite 6 server. This also provides a method to apply pre-defined filters to organized specific machines.
+* *Providers* - This presents the Red Hat Satellite 6 contents as a hierarchy of host groups belonging to a provider and then individual hosts belonging to each provider.
+* *Configured Systems* - This presents a list of all hosts on your Red Hat Satellite 6 server. This also provides a method to apply pre-defined filters to organized specific machines.
 
 Change between these two views using the accordion menu on the left of the user interface.
 
