--- a/doc-Integration_with_Red_Hat_Satellite/Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
@@ -4,12 +4,12 @@
 Red Hat CloudForms can also control policy settings of bare metal systems from Red Hat Satellite 6 through tagging. Tagging attaches levels of metadata to help define the policy rules required for a set of systems.
 
 [arabic]
-. If you have not navigated elsewhere, the +Infrastructure+ → +Configuration Management+ screen displays your Red Hat Satellite 6 server.
-. Select +Configured Systems+ from the accordion menu on the left. This displays your +system list+.
+. If you have not navigated elsewhere, the menu:Infrastructure[Configuration Management] screen displays your Red Hat Satellite 6 server.
+. Select *Configured Systems* from the accordion menu on the left. This displays your *system list*.
 . Select one or more hosts to tag. Use the checkboxes to select these systems.
-. Select +Policy+ → +Edit+ Tags. This displays the form we use for tagging systems.
-. Under +Tag Assignment+, select a tag from +Select a customer tag to assign+ and then choose a value from +Select a value to assign+. For example, you can tag this system as located in Chicago by selecting Location as the tag and Chicago as the value. Once selected, the user interface automatically adds this tag and value to the table below.
-. After adding your chosen tags and values, click +Save+.
+. Select menu:Policy[Edit] Tags. This displays the form we use for tagging systems.
+. Under *Tag Assignment*, select a tag from *Select a customer tag to assign* and then choose a value from *Select a value to assign*. For example, you can tag this system as located in Chicago by selecting Location as the tag and Chicago as the value. Once selected, the user interface automatically adds this tag and value to the table below.
+. After adding your chosen tags and values, click *Save*.
 
 The bare metal system is now configured with a set of policy tags.
 
