--- a/doc-Integration_with_Red_Hat_Satellite/Adding_a_Satellite_6_Provider_to_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Adding_a_Satellite_6_Provider_to_CloudForms.adoc
@@ -11,7 +11,7 @@ To start provisioning bare metal machines, you need at least one Red Hat Satelll
 . Select *Verify Peer Certificate* to use encrypted communication with the provider. This requires the *SSL certificates* from your Red Hat Satellite 6 provider.
 . Enter a *Username* for a user on the provider. Ideally, this would be a user in Satellite 6 with administrative access.
 . Enter a *Password* and enter it again to *Verify Password*. 
-. Click the *Validate* button to test your connection with the Red Hat Satellite 6 server.
+. Click *Validate* to test your connection with the Red Hat Satellite 6 server.
 . Click *Add* to confirm your settings and save the provider.
 
 Red Hat CloudForms Management Engine saves the Satellite 6 provider in its database and triggers a refresh of resources detected in the provider.
