--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -117,7 +117,6 @@ For more details on the fields in the New Network Interface window, see  (LINK T
 Configure storage for your virtual machine by adding a virtual disk. (Recommendation for Openshift? Do we need the below?)
 Image is the default type of disk. You can also add a Direct LUN disk or a Cinder (OpenStack Volume) disk. Image disk creation is managed entirely by the Manager. Direct LUN disks require externally prepared targets that already exist. Cinder disks require access to an instance of OpenStack Volume that has been added to the Red Hat Enterprise Virtualization environment using the External Providers window; see Adding an OpenStack Volume (Cinder) Instance for Storage Management for more information. Existing disks are either floating disks or shareable disks attached to virtual machines.
 ⁠
-
 Procedure 2.3. Adding Disks to Virtual Machines
 
 . Click the *Virtual Machines* tab and select a virtual machine.
@@ -129,3 +128,26 @@ Procedure 2.3. Adding Disks to Virtual Machines
 . Click *OK*.
 
 The new disk appears in the details pane after a short time.
+
+
+==== 2.4.1. Starting a Virtual Machine (Installing the operating system?)
+⁠
+Procedure 2.4. Starting Virtual Machines
+
+. Click the Virtual Machines tab and select a virtual machine with a status of Down.
+. Click the run ( ) button.
+. Alternatively, right-click the virtual machine and select Run.
+
+The Status of the virtual machine changes to Up, and the operating system installation begins. Open a console to the virtual machine if one does not open automatically.
+⁠
+2.4.2. Opening a Console to a Virtual Machine
+Use Remote Viewer to connect to a virtual machine.
+⁠
+
+Procedure 2.5. Connecting to Virtual Machines
+
+    Install Remote Viewer if it is not already installed. See Section 1.4.1, “Installing Console Components”.
+    Click the Virtual Machines tab and select a virtual machine.
+    Click the console button or right-click the virtual machine and select Console.
+        If the connection protocol is set to SPICE, a console window will automatically open for the virtual machine.
+        If the connection protocol is set to VNC, a console.vv file will be downloaded. Click on the file and a console window will automatically open for the virtual machine.
