Since automation.log is a filename, I changed the markup to ` `.

--- a/doc-Integration_with_ServiceNow/Managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/Managing_record_attributes.adoc
@@ -40,5 +40,5 @@ You can use the following attribute for getting or deleting a record.
 
 === Get All Records
 
-There are no attributes required to get all records. Method gets all records in the specified *ServiceNow table* and writes their attributes to *automation.log*.
+There are no attributes required to get all records. Method gets all records in the specified *ServiceNow table* and writes their attributes to `automation.log`.
 
