Since automation.log is a filename, I changed the markup to the correct markup for filenames. (`)

--- a/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
@@ -47,7 +47,7 @@ ServiceNow record unique system ID.
 
 === Get All Records
 
-There are no attributes required to get all records. Method gets all records in the specified *ServiceNow table* and writes their attributes to *automation.log*.
+There are no attributes required to get all records. Method gets all records in the specified *ServiceNow table* and writes their attributes to `automation.log`.
 
 
 -- INSERT --
