--- a/doc-Integration_with_ServiceNow/Overview.adoc
+++ b/doc-Integration_with_ServiceNow/Overview.adoc
@@ -1,7 +1,7 @@
 [[Overview]]
 == Overview
 
-Red Hat CloudForms' integration with ServiceNow enables authentication with an existing ServiceNow database and *add/amend* items in the ServiceNow database during state machine processing, for example, the VM provision state machine. Note that information in this guide assumes you have credentials and access to a ServiceNow database instance.
+Red Hat CloudForms' integration with ServiceNow enables authentication with an existing ServiceNow database and *add/amend* items in the ServiceNow database during state machine processing, such as the virtual machine provisioning state machine. Note that information in this guide assumes you have credentials and access to a ServiceNow database instance.
 
 The following new namespace and class delivers support for the management of *ServiceNow Configuration Management Database* (CMDB) records using *ServiceNow’s RESTful* web service.
 -------
