--- a/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
@@ -20,17 +20,17 @@ You can use the following attributes when creating and/or updating a record.
 
 |virtual |Boolean true or false, set to true.
 
-|name VM’s |Virtual Infrastructure name.
+|name VMs |Virtual Infrastructure name.
 
-|short_description |CloudForms VM GUID.
+|short_description |CloudForms virtual machine GUID.
 
-|host_name |VM’s Operating System hostname.
+|host_name |The virtual machine's operating system hostname.
 
-|cpu_count |VM’s CPU count.
+|cpu_count |The virtual machine's CPU count.
 
-|ram |VM’s memory.
+|ram |The virtual machine's memory.
 
-|vendor |VM’s hardware vendor (provider).
+|vendor |The virtual machine's hardware vendor (provider).
 
 |sys_id footnoteref:[a, sys_id attribute is not required during create. Its value is returned from create request and the CloudForms object custom attribute servicenow_sys_id is created and updated.] |ServiceNow record unique system ID.
 |===================================================
