Added markup to methods.

--- a/doc-Integration_with_ServiceNow/Overview.adoc
+++ b/doc-Integration_with_ServiceNow/Overview.adoc
@@ -8,7 +8,7 @@ The following new namespace and class delivers support for the management of *Se
 /RedHat/Integration/ServiceNow/CMDB
 -------
 
-You can manage records in the *CMDB_CI_SERVER* table, including create, update, and/or delete. The following methods are included:
+You can manage records in the *CMDB_CI_SERVER* table, including `create`, `update`, and/or `delete`. The following methods are included:
 
 [width="50%",cols="2,5",options="header"]
 |=========================================================
