--- a/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/managing_record_attributes.adoc
@@ -7,7 +7,7 @@ The attributes can be reduced or extended as required by amending the Ruby metho
 
 [NOTE]
 ======
-Some attributes are not free-text (variable) fields, that is, they must be specific values. For example, Vendor value must already exist in the ServiceNow Vendor table beforehand.
+Some attributes are not free-text (variable) fields, that is, they must be specific values. For example, the *vendor* value must already exist in the ServiceNow Vendor table beforehand.
 ======
 
 === Create and Update (_patch) Record
@@ -32,7 +32,7 @@ You can use the following attributes when creating and/or updating a record.
 
 |vendor |The virtual machine's hardware vendor (provider).
 
-|sys_id footnoteref:[a, sys_id attribute is not required during create. Its value is returned from create request and the CloudForms object custom attribute servicenow_sys_id is created and updated.] |ServiceNow record unique system ID.
+|sys_id footnoteref:[a, sys_id attribute is not required during `create`. Its value is returned from `create` request and the CloudForms object custom attribute *servicenow_sys_id* is created and updated.] |ServiceNow record unique system ID.
 |===================================================
 
 === Get and Delete Record
@@ -47,7 +47,7 @@ ServiceNow record unique system ID.
 
 === Get All Records
 
-There are no attributes required to get all records. Method gets all records in the specified *ServiceNow table* and writes their attributes to `automation.log`.
+There are no attributes required to get all records. This method gets all records in the specified *ServiceNow table* and writes their attributes to `automation.log`.
 
 
 -- INSERT --
