--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -58,18 +58,18 @@ You can use your preferred source, for example PXE, ISO, or Clone, when creating
 * DNS is an important element of the environment, as machines must be able to connect bi-directionally to any resource in the network using the hostname.
 That means that new virtual machines instantiated from the template need to register to your DNS system automatically.
 
-Use the following procedures to prepare a template virtual machine.
+Use the following procedures to prepare a template virtual machine to host OpenShift Enterprise.
 
-=== Creating a virtual machine in Red Hat Enterprise Virtualization
+=== Creating a Virtual Machine in Red Hat Enterprise Virtualization
 
-Install Red Hat Enterprise Linux 6.4 from ISO as a basic server on a new virtual machine using Red Hat Enterprise Virtualization.
+Install Red Hat Enterprise Linux 6.4 or higher from an ISO as a basic server on a new virtual machine using Red Hat Enterprise Virtualization.
 
 From: https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.6-Beta/html-single/Virtual_Machine_Management_Guide/index.html#Creating_a_new_virtual_machine_from_a_blank_template
 
 Create a new virtual machine and configure the required settings.
 ⁠
 
-==== Procedure 2.1. Creating a New Virtual Machine
+==== Creating a New Virtual Machine
 
 . Click the *Virtual Machines* tab.
 . Click the *New VM* button to open the New Virtual Machine window (insert screenshot?)
@@ -78,15 +78,19 @@ Create a new virtual machine and configure the required settings.
 . Select a Linux variant from the *Operating System* drop-down list. OpenShift requires Red Hat Enterprise Linux 6.4 or higher.
 . Click the *Show Advanced Options* button, and:
 .. From the *System* tab, specify the virtual machine's *Memory Size*. (REQ FOR OPENSHIFT?)
-.. From the *Boot Options* tab, choose the *First Device* that the virtual machine will boot from. You can accept the default settings for all other fields, or change them if required. For more details on all fields in the New Virtual Machine window, see (LINK TO RHEV GUIDE) Section A.1, “Explanation of Settings in the New Virtual Machine and Edit Virtual Machine Windows”.
+.. From the *Boot Options* tab, choose the *First Device* that the virtual machine will boot from.
+
+* If you have selected CD-ROM as a boot device, tick this check box and select a CD-ROM image from the drop-down menu. The images must be available in the ISO domain.
+
+You can accept the default settings for all other fields, or change them if required. For more details on all fields in the New Virtual Machine window, see (LINK TO RHEV GUIDE) Section A.1, “Explanation of Settings in the New Virtual Machine and Edit Virtual Machine Windows”.
 . Click *OK*.
 
 The new virtual machine is created and displays in the list of virtual machines in the Red Hat Enterprise Virtualization Manager with a status of `Down`. Before you can use this virtual machine, add at least one network interface and one virtual disk, and install an operating system.
 
 
-===== 2.2. Adding a Network Interface to the Virtual Machine
+===== Adding a Network Interface to the Virtual Machine
 
-. Click the *Virtual Machines* tab and select the virtual machine you created.
+. From the *Virtual Machines* tab, select the virtual machine you created.
 . Click the *Network Interfaces* tab in the details pane.
 . Click *New*. (ADD DIAGRAM?) Figure 2.2. New Network Interface window
 . Enter the *Name* of the network interface.
@@ -95,14 +99,18 @@ The new virtual machine is created and displays in the list of virtual machines 
 . Click *OK*.
 
 The new network interface is listed in the *Network Interfaces* tab in the details pane of the virtual machine. The *Link State* is set to *Up* by default when the network interface card is defined on the virtual machine and connected to the network.
+
+(INSTEAD OF THIS, POINT ONE GENERAL LINK TO THE RHEV GUIDE - ADMIN or USER in 3.5 TO GIVE MORE INFO.)
 For more details on the fields in the New Network Interface window, see  (LINK TO RHEV GUIDE) Section A.2, “Explanation of Settings in the New Network Interface and Edit Network Interface Windows”.
 
 
-==== 2.3. Adding a Virtual Disk
+==== Adding a Virtual Disk
+
 Configure storage for your virtual machine by adding a virtual disk. (Recommendation for Openshift? Do we need the below?)
+
 Image is the default type of disk. You can also add a Direct LUN disk or a Cinder (OpenStack Volume) disk. Image disk creation is managed entirely by the Manager. Direct LUN disks require externally prepared targets that already exist. Cinder disks require access to an instance of OpenStack Volume that has been added to the Red Hat Enterprise Virtualization environment using the External Providers window; see Adding an OpenStack Volume (Cinder) Instance for Storage Management for more information. Existing disks are either floating disks or shareable disks attached to virtual machines.
 ⁠
-Procedure 2.3. Adding Disks to Virtual Machines
+To add a disk to the virtual machine:
 
 . Click the *Virtual Machines* tab and select a virtual machine.
 . Click the *Disks* tab in the details pane.
@@ -114,12 +122,9 @@ Procedure 2.3. Adding Disks to Virtual Machines
 
 The new disk appears in the details pane after a short time.
 
-
-==== 2.4.1. Starting a Virtual Machine (Installing the operating system?)
+==== Installing the Virtual Machine Operating System
 ⁠
-Procedure 2.4. Starting Virtual Machines
-
-. Click the Virtual Machines tab and select a virtual machine with a status of `Down`.
+. Click the *Virtual Machines* tab and select a virtual machine with a status of `Down`.
 . Click the run ( ) button.
 . Alternatively, right-click the virtual machine and select *Run*.
 
@@ -137,14 +142,14 @@ Procedure 2.5. Connecting to Virtual Machines
 * If the connection protocol is set to SPICE, a console window will automatically open for the virtual machine.
 * If the connection protocol is set to VNC, a `console.vv` file will be downloaded. Click on the file and a console window will automatically open for the virtual machine.
 
-. Follow the prompts in the Red Hat Enterprise Linux installation to install the virtual machine's operating system. (Link for more information, see ??)
+. Follow the prompts in the Red Hat Enterprise Linux installer to install the virtual machine's operating system. For more information, on installing Red Hat Enterprise Linux 6, see https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Installation_Guide/index.html
 
-==== Registering the virtual machine
+=== Registering the virtual machine
 
 Register the virtual machine to the Red Hat Content Delivery Network (is that right?) with the following steps:
 
 . After the installation is complete, reboot the instance and log in as the root user.
-. Update the /etc/sysconfig/network-scripts/ifcfg-eth0 file so it only contains the following values:
+. Update the `/etc/sysconfig/network-scripts/ifcfg-eth0` file so it only contains the following values:
 +
 ------
 TYPE=Ethernet
@@ -204,7 +209,7 @@ Password:
 The virtual machine is now registered to the Red Hat Content Delivery Network (is that what we call it?).
 
 
-==== Configuring the virtual machine
+=== Configuring the virtual machine
 
 . Install Ruby 1.9.3:
 +
@@ -236,7 +241,7 @@ The virtual machine is now registered to the Red Hat Content Delivery Network (i
 # poweroff
 ------
 
-==== Creating a virtual machine template
+=== Creating a virtual machine template
 
 6.3.1. Creating a Template
 Create a template from an existing virtual machine to use as a blueprint for creating additional virtual machines (OR SOMETHING ELSE?_).
