--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -106,13 +106,9 @@ For more details on the fields in the New Network Interface window, see  (LINK T
 
 ==== Adding a Virtual Disk
 
-Configure storage for your virtual machine by adding a virtual disk. (Recommendation for Openshift? Do we need the below?)
+Configure storage for your virtual machine by adding a virtual disk. To add a disk to the virtual machine:
 
-Image is the default type of disk. You can also add a Direct LUN disk or a Cinder (OpenStack Volume) disk. Image disk creation is managed entirely by the Manager. Direct LUN disks require externally prepared targets that already exist. Cinder disks require access to an instance of OpenStack Volume that has been added to the Red Hat Enterprise Virtualization environment using the External Providers window; see Adding an OpenStack Volume (Cinder) Instance for Storage Management for more information. Existing disks are either floating disks or shareable disks attached to virtual machines.
-⁠
-To add a disk to the virtual machine:
-
-. Click the *Virtual Machines* tab and select a virtual machine.
+. From the *Virtual Machines* tab, select your virtual machine.
 . Click the *Disks* tab in the details pane.
 . Click *New*. (need diagram?) The New Virtual Disk Window Figure 2.3. The New Virtual Disk Window
 . Use the appropriate radio buttons to switch between *Image*, *Direct LUN*, or Cinder*. (relevant???) Virtual disks added in the User Portal can only be *Image* disks. *Direct LUN* and *Cinder* disks can be added in the Administration Portal.
